--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ doc/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
-
+bower_components
 .env
 .DS_Store
 Desktop.ini
